// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android withDivider dark mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(29, 27, 32)",
        "borderColor": null,
        "borderRadius": 12,
        "borderWidth": 0,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingRight": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(72, 72, 74)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingLeft": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider light mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 12,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingRight": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingLeft": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 12,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
  testID="arbitrary value"
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingRight": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingLeft": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with custom main style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 12,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingRight": 16,
        },
        Object {
          "flex": 2,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingLeft": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with custom stub style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 12,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingRight": 16,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingLeft": 16,
        },
        Object {
          "flex": 3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`Android withDivider should render correctly without padding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 12,
        "borderWidth": 1,
      },
      Array [
        Object {
          "flexDirection": "row",
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(221, 221, 229)",
          "flexDirection": "column",
          "width": 1,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
            "textAlign": "left",
          },
          Object {},
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;
